--- a/ssm-master/src/main/webapp/WEB-INF/web.xml
+++ b/ssm-master/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,29 @@
 		<!-- 默认匹配所有的请求 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<!-- 默认匹配所有的请求 -->
+		<url-pattern>*.png</url-pattern>
+	</servlet-mapping>
+
+	<!-- Spring字符集过滤器，解决post中文乱码问题 -->
+	<filter>
+		<filter-name>SpringEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>SpringEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
